# octostash

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  de.rs  lib.rs  stash.rs
src/de/: files.rs  files_len.rs  id.rs
src/ser/: files.rs
src/stash/: error.rs  futures.rs  http.rs
src/stash/futures/: body.rs  ids_chunk.rs
tests/: main.rs
