[package]
name = "octostash"
version = "0.1.0"
authors = ["Artur Helmanau <m30bit@gmail.com>"]
categories = ["database", "api-bindings"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
serde = "1.0.160"
serde_json = "1.0.96"
hyper = { version = "0.14.26", features = ["client", "http2"] }
hyper-tls = "0.5.0"
futures-core = "0.3.28"
itoa = "1.0.6"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["rt", "macros"] }
futures-util = { version = "0.3.28", default-features = false, features = [
    "std",
] }
